# ai-xai-research

./: .gitignore  CITATION.cff  LICENSE  Makefile  PROFILE_BIO.md  README.md  README_RU.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
datasets/: README.md
docs/: api.md  index.md
docs/guides/: geoai.md  neuro_symbolic.md  xai.md
examples/: xai_feature_importance.py
notebooks/: README.md
src/ai_xai_toolkit/dss/: mcda.py
src/ai_xai_toolkit/neurosymbolic/: rules.py
src/ai_xai_toolkit/xai/: explainers.py
tests/: test_mcda.py
